--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,40 +1,28 @@
-# .github/workflows/build.yml
+name: Build and Push Docker Image
 
-name: Build and Push Docker Image to Docker Hub
-
-# This action runs on every push to the 'main' branch
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
   build_and_push:
-    # The job will run on a fresh Ubuntu virtual machine
     runs-on: ubuntu-latest
-
     steps:
-      # Step 1: Check out your repository code
-      - name: Check out the repo
-        uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      # Step 2: Log in to Docker Hub
-      # This uses the secrets you created in the previous step
-      - name: Log in to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # Step 3: Build the Docker image and push it to Docker Hub
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and Push
+        uses: docker/build-push-action@v6
         with:
-          # The context is the root of your repository
-          context: .
-          # The name of the Dockerfile to use
-          file: ./Dockerfile
-          # Push the image to the registry after building
           push: true
-          # Tag the image. This creates a tag like 'your-username/fluent-crm-cli:latest'
-          # It uses a secret for the username and a variable for the image name.
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ vars.DOCKER_IMAGE_NAME }}:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
